syntax = "proto3";
package pb;

service User {
  rpc GetUser (UserMessage) returns (UserResponse) {}
}

message UserMessage {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string last_name = 2;
  string first_name = 3;
  string email = 4;
}